syntax = "proto3";

package metrics;

option go_package = "metrics/proto";

enum Mtype {
  MTYPE_UNSPECIFIED = 0;
  MTYPE_GAUGE = 1;
  MTYPE_DELTA = 2;
}

message Metric {
  string id = 1;  // id метрики
  Mtype mtype = 2; // тип метрики
  int64 delta = 3;
  double value = 4; 
}

message UpdateMetricRequest {
  Metric metric = 1;
}

message UpdateMetricResponse {
  Metric metric = 1;
}




service Metrics {
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
}